--- a/style.css
+++ b/style.css
@@ -3,128 +3,224 @@
   padding: 0px;
   box-sizing: border-box;
 }
-.navbar-container{
-    /* border: 2px solid black; */
-
+li {
+  list-style: none;
 }
-.left {
-  display: inline-block;
-  /* border: 2px solid orangered; */
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  margin-left: 30px;
-}
-
-.logo-1 {
-  width: 40%;
-}
-.mid {
-  display: block;
-  width: 45%;
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin: 0 auto;
   padding: 1rem 0;
-  /* border: 2px solid rgb(255, 11, 255); */
+  max-width: 1150px;
+  width: 100%;
 }
-.button-group {
-  display: inline-block;
-  position: absolute;
-  width: 20%;
-  padding: 2rem 0;
-  margin: 0 auto;
-  top:0;
-  right:0;
-  margin-right: 40px;
-  /* border: 2px solid rebeccapurple; */
+.left img {
+  width: 110px;
+}
+.mid .list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.list-item {
+  margin-right: 20px;
+  font-family: "Orbitron", "serif";
+  font-size: 15px;
+  font-weight: 500;
+}
+.list-item:first-child {
+  font-size: 18px;
+  font-weight: 600;
+  text-decoration: underline;
 }
 
-.search-icon {
-  display: inline-block;
-  position: absolute;
-  right: 115px;
-  top: 18%;
-  height: 10px;
+.button-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
 }
-.search-icon svg {
-  display: inline-block;
-  width:60%;
+
+.button-group svg {
+  width: 24px;
+  margin-right: 10px;
+  transition: 0.3s all ease-in-out;
 }
-.search-icon svg:hover{
-    /* background-color: rgb(9, 98, 181); */
-    transform: scale(.8);
+.button-group svg:hover {
+  transform: scale(0.8);
 }
+
 .nav-button {
-  display: inline-block;
-  position: absolute;
-  width: 40%;
-  height: auto;
-  right: 8px;
-  top:18%;
-  font-size: 10px;
   font-weight: 400;
-  padding: 6px 8px;
+  padding: 4px 20px;
   border-radius: 6px;
   font-size: 14px;
+  font-family: "Poppins", "serif";
+  color: #313131;
+  border: 2px solid black;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.35s linear;
 }
-.nav-button:hover{
-    color: #fff;
-    background-color: rgb(0, 51, 154);
-    transition: all 0.3s linear;
-}
-
-.list {
-  display: inline-block;
-}
-.list li {
-  font-family: "Orbitron";
-  display: inline-block;
-  list-style: none;
-  padding: 5px 12px;
-  font-size: 14px;
-  font-weight: 700px;
-
-}
-.list li:hover{
-    background-color: crimson;
-    color: #fff;
-    border-radius: 10px;
-  
+.nav-button:hover {
+  color: #fff;
+  background-color: #313131;
 }
 
 .hero-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1150px;
+  flex-direction: row;
   width: 100%;
   height: 90vh;
   position: relative;
-  /* border: 2px solid purple; */
+  margin: 0 auto;
+}
+.hero-container-left {
+  /* position: relative; */
+  width: 40%;
+  height: 100%;
+  margin-right: 40px;
+}
+.hero-container-left .square img {
+  position: absolute;
+  bottom: 40px;
+  width: 200px;
+  left: 140px;
+}
+.hero-container-left .image img {
+  position: absolute;
+  top: 60px;
+  width: 280px;
+  left: 20px;
+  z-index: 1;
 }
 
+.hero-container-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 55%;
+  height: 90vh;
+}
+.hero-container span.globe img {
+  position: absolute;
+  left: 55%;
+  top: 20px;
+  width: 3rem;
+}
+.hero-container span.star img {
+  position: absolute;
+  width: 2rem;
+  right: 100px;
+  top: 50px;
+}
+.hero-container span.star-2 img {
+  position: absolute;
+  left: 42%;
+  bottom: 40px;
+  width: 1.5rem;
+}
+.hero-heading {
+  font-size: 2.25rem;
+  font-family: "Orbitron", sans-serif;
+  text-align: center;
+  margin-bottom: 1rem;
+  font-weight: 700;
+  margin-top: 4rem;
+}
+.hero-description {
+  font-size: 12px;
+  line-height: 15px;
+  margin-top: 2rem;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+.hero-container .hero-container-right .hero-container-button {
+  margin: 50px auto;
+  /* border: 2px solid red; */
+}
+.hero-container-right .button-email {
+  font-family: "Orbitron", sans-serif;
+  background: transparent;
+  color: #1d1c1c;
+  padding: 2px 20px;
+  font-size: 14px;
+  border: 2px solid #232222;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.5s all ease-in-out;
+}
+.button-join {
+  font-family: "Orbitron", sans-serif;
+  font-weight: 500;
+  border-radius: 4px;
+  color: white;
+  font-size: 14px;
+  background-color: #000;
+  transition: 0.5s all ease-in-out;
+  cursor: pointer;
+}
+.hero-container .hero-container-right div .button-email:hover {
+  background-color: rgb(12, 1, 1);
+  color: #ffffff;
+}
+
+.button-join:hover {
+  color: rgb(0, 0, 0);
+  background-color: #fff;
+}
+.footer{
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.footer .contact-heading{
+  font-size: 1rem;
+  font-family: "Poppins", "serif";
+  font-weight: 500;
+  color: #313131;
+  text-transform: capitalize;
+}
+.icons {
+ cursor: pointer;
+}
+.hero-container-right div div.icons span{
+  margin-right: 1rem;
+}
+.hero-container-right div div.icons span:last-child{
+  margin-right: 0;
+}
+.hero-container-right div div.icons span img {
+  width: 20px;
+}
+.hero-container-right div div.icons span img:hover {
+  transform: scale(.75);
+}
+.hero-container-right div div.icons span img:hover {
+  transition: all .3s linear;
+}
+/*
+ */
+
+
+
+/* .
 .hero-container span.square img {
   position: absolute;
-  width:95%;
+  width: 95%;
   left: 107px;
   top: 145px;
   width: 27%;
   z-index: -2;
 }
-.hero-container span.star img {
-  position: absolute;
-  width: 2rem;
-  right: 120px;
-  top: 30px;
-}
-.hero-container span.star-2 img {
-    position: absolute;
-    left: 42%;
-    top: 260px;
-    width: 2rem;
-  }
-  
-.hero-container span.globe img {
-  position: absolute;
-  left: 50%;
-  top: 20px;
-  width: 3rem;
-}
+
+
+
 .hero-container div > img {
   width: 25%;
   margin: 50px 50px;
@@ -136,103 +232,9 @@
   right: 0px;
   top: 0px;
 }
-.hero-heading {
-  font-size: 1.5rem;
-  display: inline-block;
-  position: absolute;
-  font-family: "Orbitron", sans-serif;
-  font-weight: 700;
-  top: 74px;
-  right: 80px;
-  width: 415px;
-  margin: 4px 20px 6px 22px;
-}
-.hero-description {
-  display: inline-block;
-  position: absolute;
-  font-size: 10px;
-  font-weight: 300;
-  text-align: center;
-  font-family: "Poppins", sans-serif;
-  top: 120px;
-  right: 180px;
-  align-items: center;
-  width: 288px;
-}
-/* .hero-container .hero-container-right .hero-container-button {
-  margin: 50px 20px;
-  border: 2px solid red;
-} */
 
-.hero-container-right .button-email {
-  display: inline-block;
-  position: absolute;
-  font-family: "Orbitron", sans-serif;
-  font-weight: 500;
-  background: transparent;
-  color: #767676;
-  top: 180px;
-  right: 330px;
-  width: 80px;
-  padding: 4px 20px;
-  margin-top: 2rem;
-  font-size: 6px;
-  border: 1px solid #767676;
-  border-radius: 4px;
-}
-.hero-container .hero-container-right div .button-email:hover {
-  background-color: rgb(12, 1, 1);
-  color: #ffffff;
-}
-.button-join {
-  display: inline-block;
-  position: absolute;
-  font-family: "Orbitron", sans-serif;
-  font-weight: 500;
-  background: transparent;
-  color: #767676;
-  top: 180px;
-  width: 60px;
-  padding: 4px 20px;
-  margin-top: 2rem;
-  font-size: 6px;
-  border: 1px solid #767676;
-  border-radius: 4px;
-  right: 240px;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  color: white;
-  background-color: #000;
-}
-.button-join:hover {
-  color: rgb(0, 0, 0);
-  background-color: #fff;
-}
-.contact-heading {
-  display: inline-block;
-  position: absolute;
-  top: 254px;
-  right: 270px;
-  width: 75px;
-  font-size: 10px;
-  font-weight: 300;
-}
-.icons{
-    /* border: 2px solid rgb(22, 213, 133); */
-    display: inline-block;
-    position: absolute;
-    width: 90px;
-    right: 260px;
-    top: 280px;
-    /* size: 16px; */
-}
-.hero-container-right div div.icons span img {
-    width: 13px;
-    margin: 2px;
-  }
-  .hero-container-right div div.icons span img:hover{
-    transform: scale(1.5);
-  }
-  .hero-container-right div div.icons span img:hover{
-    transition: all 0.3s linear;
-  }
+
+
+
+
+ */
